fix: Footer and loading wheel placement on mobile

--- a/frontend/src/components/layout/Layout.module.css
+++ b/frontend/src/components/layout/Layout.module.css
@@ -20,8 +20,11 @@ body {
 #main-content {
     padding: 0.75em;
     margin: auto 0;
-    height: 100%;
     min-height: fit-content;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
